--- a/pdf_reader/pubspec.yaml
+++ b/pdf_reader/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   
   # Audio
   just_audio: ^0.9.40
+  just_audio_background: ^0.0.1-beta.14
+  flutter_cache_manager: ^3.4.1
 
 
   # State Management
